[tool.poetry]
name = "sepehr-tech"
version = "0.1.0"
description = ""
authors = ["sepehr masihpour"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.116.1"
pydantic = "^2.11.7"
httpx = "^0.28.1"
uvicorn = "^0.35.0"
dotenv = "^0.9.9"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
